ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Office_Business_Board__c.field-meta.xml
<CustomField>
    <fullName>Office_Business_Board__c</fullName>
    <label>Office/Business Board</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appearing outside the Building</fullName>
            </value>
            <value>
                <fullName>Appearing on the Door</fullName>
            </value>
            <value>
                <fullName>Printed on paper stick to door</fullName>
            </value>
            <value>
                <fullName>No name board seen</fullName>
            </value>
            <value>
                <fullName>Not matching with the name available us</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>