ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Office_Business_Size_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Office_Business_Size_Sqft__c</fullName>
    <label>Office/Business Size Sqft</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;100</fullName>
            </value>
            <value>
                <fullName>100-250</fullName>
            </value>
            <value>
                <fullName>250-500</fullName>
            </value>
            <value>
                <fullName>500-1000</fullName>
            </value>
            <value>
                <fullName>1000-5000</fullName>
            </value>
            <value>
                <fullName>&gt;5000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>