ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Office_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Office_Business_Type__c</fullName>
    <label>Office/Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indepenent Office</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Shed</fullName>
            </value>
            <value>
                <fullName>IT Park</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>