ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Office_FI_Accepted_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Office_FI_Accepted_Rejected__c</fullName>
    <label>Office FI Accepted/Rejected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>