ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Office_FI_Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Office_FI_Completion_Time__c</fullName>
    <description>Enter the time of the office FI completion</description>
    <label>Office FI Completion Time</label>
    <type>DateTime</type>
</CustomField>