ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Office_ownership__c.field-meta.xml
<CustomField>
    <fullName>Office_ownership__c</fullName>
    <label>Office ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>