ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Office_Type__c.field-meta.xml
<CustomField>
    <fullName>Office_Type__c</fullName>
    <label>Office Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office cum Residence</fullName>
            </value>
            <value>
                <fullName>Independent Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>