ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Other_source_of_Income__c.field-meta.xml
<CustomField>
    <fullName>Other_source_of_Income__c</fullName>
    <description>Source and corresponding Approximate Income information to be updated</description>
    <inlineHelpText>Provide all SOURCE and corresponding APPROXIMATE INCOME details</inlineHelpText>
    <label>Other source of Income</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>