ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Own_Equipment_Tools__c.field-meta.xml
<CustomField>
    <fullName>Own_Equipment_Tools__c</fullName>
    <label>Own Equipment/Tools?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>