ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Patta_Document_available__c.field-meta.xml
<CustomField>
    <fullName>Patta_Document_available__c</fullName>
    <description>Please enter the value</description>
    <label>Patta Document available</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>