ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Payment_Proof_Shown__c.field-meta.xml
<CustomField>
    <fullName>Payment_Proof_Shown__c</fullName>
    <label>Water Bill Payment Proof Shown ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>