ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Payment_Proof_shown_for_Electricity_Bill__c.field-meta.xml
<CustomField>
    <fullName>Payment_Proof_shown_for_Electricity_Bill__c</fullName>
    <label>Electricity Bill Payment Proof shown ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>