ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Person_Met__c.field-meta.xml
<CustomField>
    <fullName>Person_Met__c</fullName>
    <label>Person Met</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Co-borrower</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>