ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/POS_Machine__c.field-meta.xml
<CustomField>
    <fullName>POS_Machine__c</fullName>
    <label>POS Machine</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>