ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Price_per_unit__c.field-meta.xml
<CustomField>
    <fullName>Price_per_unit__c</fullName>
    <label>Price per unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>