ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Profile_to_Product_Match_1__c.field-meta.xml
<CustomField>
    <fullName>Profile_to_Product_Match_1__c</fullName>
    <label>Profile to Product Match</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>