ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Profile_to_Product_Match__c.field-meta.xml
<CustomField>
    <fullName>Profile_to_Product_Match__c</fullName>
    <label>Profile to Product Match</label>
    <length>100</length>
    <type>Text</type>
</CustomField>