ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Purpose_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Purchase__c</fullName>
    <label>Purpose of Purchase</label>
    <length>50</length>
    <type>Text</type>
</CustomField>