ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/REFERENCE_CHECK_TRACTORHARVESTER__c.field-meta.xml
<CustomField>
    <fullName>REFERENCE_CHECK_TRACTORHARVESTER__c</fullName>
    <label>REFERENCE CHECK TRACTOR/HARVESTER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>