ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FATHER</fullName>
            </value>
            <value>
                <fullName>BROTHER - IN LAW</fullName>
            </value>
            <value>
                <fullName>BROTHER - INCLUDING STEP BROTHER</fullName>
            </value>
            <value>
                <fullName>GRANDDAUGHTER</fullName>
            </value>
            <value>
                <fullName>GRANDSON</fullName>
            </value>
            <value>
                <fullName>HUSBAND OF GRANDDAUGHTER</fullName>
            </value>
            <value>
                <fullName>HUSBAND OF SISTER</fullName>
            </value>
            <value>
                <fullName>SISTER - INCLUDING STEP SISTER</fullName>
            </value>
            <value>
                <fullName>WIFE OF GRANDSON</fullName>
            </value>
            <value>
                <fullName>WIFE OF BROTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>