ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Relationship_between_Borrower_Coborrower__c.field-meta.xml
<CustomField>
    <fullName>Relationship_between_Borrower_Coborrower__c</fullName>
    <label>Relationship between Borrower-Coborrower</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>