ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/REPAYMENT_FREQUENCY__c.field-meta.xml
<CustomField>
    <fullName>REPAYMENT_FREQUENCY__c</fullName>
    <label>REPAYMENT FREQUENCY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HALF YEALRY</fullName>
            </value>
            <value>
                <fullName>QUARTERLY</fullName>
            </value>
            <value>
                <fullName>MONTHLY</fullName>
            </value>
            <value>
                <fullName>BI-MONTHLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>