ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/REPAYMENT_MODE__c.field-meta.xml
<CustomField>
    <fullName>REPAYMENT_MODE__c</fullName>
    <label>REPAYMENT MODE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>E-NACH</fullName>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>