ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Residance_Permanent_Address_are_Same__c.field-meta.xml
<CustomField>
    <fullName>Residance_Permanent_Address_are_Same__c</fullName>
    <label>Residance &amp; Permanent Address are Same</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>