ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Residence_FI_completion_time__c.field-meta.xml
<CustomField>
    <fullName>Residence_FI_completion_time__c</fullName>
    <label>FI completion time</label>
    <type>DateTime</type>
</CustomField>