ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Residence_FI_Status__c.field-meta.xml
<CustomField>
    <fullName>Residence_FI_Status__c</fullName>
    <label>Residence FI Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>