ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Residence_Type__c.field-meta.xml
<CustomField>
    <fullName>Residence_Type__c</fullName>
    <label>Residence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Parent Owned</fullName>
            </value>
            <value>
                <fullName>Co-Lease</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>