ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Running_loan_Emi_obligation_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Running_loan_Emi_obligation_Monthly__c</fullName>
    <label>Running loan Emi obligation (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>