ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Same_Addresst_as_in_the_Application__c.field-meta.xml
<CustomField>
    <fullName>Same_Addresst_as_in_the_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Address as in the Application</label>
    <type>Checkbox</type>
</CustomField>