ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Scheme_Type__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Type__c</fullName>
    <label>Buyer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FTU</fullName>
            </value>
            <value>
                <fullName>REPEAT BUYER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>