ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Second_Child_DOB__c.field-meta.xml
<CustomField>
    <fullName>Second_Child_DOB__c</fullName>
    <label>Second Child DOB</label>
    <type>Date</type>
</CustomField>