ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Second_Child_Gender__c.field-meta.xml
<CustomField>
    <fullName>Second_Child_Gender__c</fullName>
    <label>Second Child Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>