ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/SENP_Pension_Income__c.field-meta.xml
<CustomField>
    <fullName>SENP_Pension_Income__c</fullName>
    <label>SENP - Pension Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>