ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Since_how_long_in_Agri_commercial__c.field-meta.xml
<CustomField>
    <fullName>Since_how_long_in_Agri_commercial__c</fullName>
    <label>Since how long in Agri commercial</label>
    <type>TextArea</type>
</CustomField>