ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Sold_to_Contact_details__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_Contact_details__c</fullName>
    <label>Sold to Contact details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>