ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Sub_Scheme_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Scheme_Type__c</fullName>
    <label>Land Holding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KYC or lease land holding</fullName>
            </value>
            <value>
                <fullName>0.1-2 acre</fullName>
            </value>
            <value>
                <fullName>2-4 acre</fullName>
            </value>
            <value>
                <fullName>&gt;4 acre</fullName>
            </value>
            <value>
                <fullName>Agri Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>