ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Telephone_Bill_Payment_Proof_Shown__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Bill_Payment_Proof_Shown__c</fullName>
    <label>Telephone Bill Payment Proof Shown ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>