ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Third_Child_DOB__c.field-meta.xml
<CustomField>
    <fullName>Third_Child_DOB__c</fullName>
    <label>Third Child DOB</label>
    <type>Date</type>
</CustomField>