ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Third_Child_Name__c.field-meta.xml
<CustomField>
    <fullName>Third_Child_Name__c</fullName>
    <label>Third Child Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>