ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Total_Agri_Com_NetIncome_Proposed_Harves__c.field-meta.xml
<CustomField>
    <fullName>Total_Agri_Com_NetIncome_Proposed_Harves__c</fullName>
    <label>Total Agri Com NetIncome-Proposed Harves</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>