ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Total_Agri_Com_NetIncome_Proposed_Tract__c.field-meta.xml
<CustomField>
    <fullName>Total_Agri_Com_NetIncome_Proposed_Tract__c</fullName>
    <label>Total Agri Com NetIncome-Proposed Tract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>