ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Total_Agri_Comm_Expense_Proposed_Tractor__c.field-meta.xml
<CustomField>
    <fullName>Total_Agri_Comm_Expense_Proposed_Tractor__c</fullName>
    <label>Total Agri Comm Expense-Proposed Tractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>