ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Total_Agri_Comm_Income_Existing_Harvest__c.field-meta.xml
<CustomField>
    <fullName>Total_Agri_Comm_Income_Existing_Harvest__c</fullName>
    <label>Total Agri Comm Income-Existing Harvest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>