ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Total_Agri_Expenses_for_Proposed_Tractor__c.field-meta.xml
<CustomField>
    <fullName>Total_Agri_Expenses_for_Proposed_Tractor__c</fullName>
    <label>Total Agri Expenses for Proposed Tractor</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>