ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Total_Agri_Net_Income_for_Existing_Tract__c.field-meta.xml
<CustomField>
    <fullName>Total_Agri_Net_Income_for_Existing_Tract__c</fullName>
    <label>Total Agri Net Income for Existing Tract</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>