ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Total_Agri_Net_Income_for_Proposed_Harve__c.field-meta.xml
<CustomField>
    <fullName>Total_Agri_Net_Income_for_Proposed_Harve__c</fullName>
    <label>Total Agri Net Income for Proposed Harve</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>