ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Total_Experience_Years__c.field-meta.xml
<CustomField>
    <fullName>Total_Experience_Years__c</fullName>
    <label>Total Experience Years</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1 Year</fullName>
            </value>
            <value>
                <fullName>B/W 1 - 2</fullName>
            </value>
            <value>
                <fullName>B/W 2 - 3</fullName>
            </value>
            <value>
                <fullName>&gt;3 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>