ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Total_HL_CAR_PL_TW_Loan__c.field-meta.xml
<CustomField>
    <fullName>Total_HL_CAR_PL_TW_Loan__c</fullName>
    <label>Total HL,CAR,PL TW Loan</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>